Submitting homework for Lesson 2

--- a/Lesson2-HTML-CSS/homework/homework.html
+++ b/Lesson2-HTML-CSS/homework/homework.html
@@ -1,1 +1,23 @@
-<!-- In this file you will complete the homework found in the homework-readme.md file -->
+<html>
+    <head>
+        <title>Evgeni's HTML homework</title>
+        <link rel="stylesheet" href="C:\LambdaSchool\Precourse\Lesson2-HTML-CSS\styles.css">
+    </head>
+    <body>
+        <div class="divClass">
+        <h1 class="divClass">Evgeni</h1>
+        <h3>Lambda School</h3>
+        <h4>HTML/CSS homework</h4>
+    </div>
+    <div class="divClass">
+     <span id="spanId">My favourite food is tomatoes. I could and do eat them almost every day and I never get tired of them. I prefer them fresh in a salad or a sandwich, but I also cook very often with them.</span>
+     <a href="http://www.ilforno.bg">My favourite restaruant</a>
+    </div>
+    <div id="thirdDiv">      
+        <ul>
+            <li>Red tomatoes<img src=https://www.producemarketguide.com/sites/default/files/red-tomatoes-on-the-vine_variety-page.png id="img"></a></li>
+            <li>Pink tomatoes<img src=http://www.amishlandseeds.com/images/tomatoes-russian/mikado-rozovyy-russion-mikado-pink-15.jpg id=img2></li>
+        </ul>
+    </div>
+    </body>
+</html>
